--- a/Covid19/Covid.ipynb
+++ b/Covid19/Covid.ipynb
@@ -61,7 +61,7 @@
     "import Documents.GitHub.Cov2020.Covid19.LoadData as covid\n",
     "\n",
     "\n",
-    "# w = covid.Covid(covid.GetData().data)\n",
+    "w = covid.Covid(covid.GetData().data)\n",
     "\n",
     "# w.createRegion(\"China\")\n",
     "# w.createRegion(\"US\")\n",
@@ -73,11 +73,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[All Europe Countries](https://github.com/rafallk/cov2020/blob/master/Covid19/Europe.ipynb)"
+   ]
   }
  ],
  "metadata": {
